--- a/BeerCup.Mobile/BeerCup.Mobile/Views/LoginView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/LoginView.xaml
@@ -7,7 +7,7 @@
         <Label Text="User:" />
         <Entry x:Name="user" Text="{Binding Username, Mode=TwoWay}"/>
         <Label Text="Password:" />
-        <Entry x:Name="password" IsPassword="True" />
+        <Entry x:Name="password" IsPassword="True" Text="{Binding Password}"/>
         <Button Text="Login" Command="{Binding LoginCommand}" />
     </StackLayout>
 </ContentPage>
