Navigation (Login, Home, Battle)

--- a/BeerCup.Mobile/BeerCup.Mobile/Views/MainView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/MainView.xaml
@@ -9,6 +9,8 @@
         <views:MenuView BindingContext="{Binding MenuViewModel}" />
     </MasterDetailPage.Master>
     <MasterDetailPage.Detail>
-        <ContentPage></ContentPage>
+        <ContentPage>
+            <Label Text="Main View" />
+        </ContentPage>
     </MasterDetailPage.Detail>
 </MasterDetailPage>
