--- a/BeerCup.Mobile/BeerCup.Mobile/Views/AdminPanelView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/AdminPanelView.xaml
@@ -5,6 +5,7 @@
     <ContentPage.Content>
         <StackLayout>
             <Button Text="Wystartuj bitwę" Command="{Binding StartBattleCommand}" IsEnabled="{Binding BattleStartAllowed}"/>
+            <Button Text="Zakończ bitwę" Command="{Binding EndBattleCommand}" IsEnabled="{Binding BattleEndAllowed}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
