--- a/BeerCup.Mobile/BeerCup.Mobile/Views/AdminPanelView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/AdminPanelView.xaml
@@ -4,8 +4,9 @@
              x:Class="BeerCup.Mobile.Views.AdminPanelView">
     <ContentPage.Content>
         <StackLayout>
-            <Button Text="Wystartuj bitwę" Command="{Binding StartBattleCommand}" IsEnabled="{Binding BattleStartAllowed}"/>
+            <Button Text="{Binding StartButtonText}" Command="{Binding StartBattleCommand}" IsEnabled="{Binding BattleStartAllowed}"/>
             <Button Text="Zakończ bitwę" Command="{Binding EndBattleCommand}" IsEnabled="{Binding BattleEndAllowed}"/>
+            <Button Text="Ogłoś wyniki bitwy" Command="{Binding PublishResultsCommand}" IsEnabled="{Binding PublishResultsAllowed}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
