--- a/BeerCup.Mobile/BeerCup.Mobile/App.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/App.xaml
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:BeerCup.Mobile.Converters"
              x:Class="BeerCup.Mobile.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <converters:ItemTappedConverter x:Key="LocalItemTappedConverter"></converters:ItemTappedConverter>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
