--- a/BeerCup.Mobile/BeerCup.Mobile/Views/ResultsView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/ResultsView.xaml
@@ -11,18 +11,22 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="3*" />
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                </Grid.ColumnDefinitions>
-                                <Label Text="{Binding FinalRank}" Grid.Column="1" />
-                                <Label Text="{Binding Brewery.Name}" Grid.Column="2" />
-                                <Label Text="{Binding VotesReceived}" Grid.Column="3" />
-                                <Label Text="{Binding Precentage}" Grid.Column="4" />
-                            </Grid>
+                            <StackLayout BackgroundColor="#eee">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="3*" />
+                                        <ColumnDefinition Width="3*" />
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding FinalRank}" Grid.Column="1" />
+                                    <Label Text="{Binding BeerNo, Converter={StaticResource LocalBeerNoConverter}}" Grid.Column="2" />
+                                    <Label Text="{Binding Brewery.Name}" Grid.Column="3" />
+                                    <Label Text="{Binding VotesReceived}" Grid.Column="4" />
+                                    <Label Text="{Binding Precentage}" Grid.Column="5" />
+                                </Grid>
+                            </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
