--- a/BeerCup.Mobile/BeerCup.Mobile/App.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <converters:ItemTappedConverter x:Key="LocalItemTappedConverter"></converters:ItemTappedConverter>
             <converters:BeerNoConverter x:Key="LocalBeerNoConverter"></converters:BeerNoConverter>
+            <converters:UserVoteToColorConverter x:Key="LocalUserVoteToColorConverter"></converters:UserVoteToColorConverter>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
