--- a/BeerCup.Mobile/BeerCup.Mobile/Views/EditBreweryView.xaml
+++ b/BeerCup.Mobile/BeerCup.Mobile/Views/EditBreweryView.xaml
@@ -6,7 +6,7 @@
         <Frame AbsoluteLayout.LayoutFlags="SizeProportional" AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" HasShadow="True" CornerRadius="10">
             <StackLayout Margin="0, 30">
                 <Label Text="Edytuj Browar" />
-                <Entry Text="{Binding BreweryName}" />
+                <Entry Text="{Binding Brewery.Name}" />
                 <StackLayout Orientation="Horizontal">
                     <Button Text="Usuń Browar" TextColor="Red" Command="{Binding DeleteBreweryTapped}" />
                     <Button Text="Zapisz" Command="{Binding SaveEditBreweryTapped}" />
